Fixed modal title overflow

--- a/components/style/custom-styles/_modal.less
+++ b/components/style/custom-styles/_modal.less
@@ -33,6 +33,7 @@
   }
 
   .ant-modal-title {
+    overflow: hidden;
     font-weight: 600;
     line-height: 24px;
     white-space: nowrap;
